syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "WidgetCreateLocationInfo.proto";
import "WidgetCreatorInfo.proto";

message WidgetDoBagReq {
	enum CmdId {
		option allow_alias = true;
		ENET_CHANNEL_ID = 0;
		NONE = 0;
		ENET_IS_RELIABLE = 1;
		IS_ALLOW_CLIENT = 1;
		CMD_ID = 4269;
	}

	oneof OpInfo {
		WidgetCreateLocationInfo location_info = 20;
		WidgetCreatorInfo widget_creator_info = 21;
	}
	uint32 material_id = 1;
}
