syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";


message WidgetGadgetData {
	uint32 gadget_id = 1;
	repeated uint32 gadget_entity_id_list = 3;
}
